--- a/keel/build.gradle
+++ b/keel/build.gradle
@@ -17,7 +17,7 @@ allprojects {
   if (name != "keel-bom") {
     apply(plugin: "java")
     apply(plugin: "java-library")
-    apply(from: "$rootDir/gradle/kotlin.gradle")
+    apply(from: "$rootDir/../kotlin.gradle")
     apply(from: "$rootDir/gradle/test.gradle")
     apply(plugin: "com.github.ben-manes.versions")
     apply(plugin: "com.diffplug.spotless")
