--- a/.github/workflows/spinnaker-libraries.yml
+++ b/.github/workflows/spinnaker-libraries.yml
@@ -60,20 +60,20 @@ jobs:
         run: |
           ./gradlew assemble publishJava
 
-  libraries-nexus:
-    runs-on: ubuntu-latest
-    needs:
-      - version
-    steps:
-      - name: Publish Nexus libraries
-        env:
-          ORG_GRADLE_PROJECT_version: ${{ needs.version.outputs.version }}
-          ORG_GRADLE_PROJECT_nexusPublishEnabled: true
-          ORG_GRADLE_PROJECT_nexusStagingUrl: ${{ }}
-          ORG_GRADLE_PROJECT_nexusSnapshotUrl: ${{ }}
-          ORG_GRADLE_PROJECT_nexusUsername: ${{ secrets.NEXUS_USERNAME }}
-          ORG_GRADLE_PROJECT_nexusPassword: ${{ secrets.NEXUS_PASSWORD }}
-          ORG_GRADLE_PROJECT_nexusPgpSigningKey: ${{ secrets.NEXUS_PGP_SIGNING_KEY }}
-          ORG_GRADLE_PROJECT_nexusPgpSigningPassword: ${{ secrets.NEXUS_PGP_SIGNING_PASSWORD }}
-        run: |
-          ./gradlew assemble ${{ inputs.project }}-web:installDist publishToNexus closeAndReleaseNexusStagingRepository
+#  libraries-nexus:
+#    runs-on: ubuntu-latest
+#    needs:
+#      - version
+#    steps:
+#      - name: Publish Nexus libraries
+#        env:
+#          ORG_GRADLE_PROJECT_version: ${{ needs.version.outputs.version }}
+#          ORG_GRADLE_PROJECT_nexusPublishEnabled: true
+#          ORG_GRADLE_PROJECT_nexusStagingUrl: ${{  }}
+#          ORG_GRADLE_PROJECT_nexusSnapshotUrl: ${{  }}
+#          ORG_GRADLE_PROJECT_nexusUsername: ${{ secrets.NEXUS_USERNAME }}
+#          ORG_GRADLE_PROJECT_nexusPassword: ${{ secrets.NEXUS_PASSWORD }}
+#          ORG_GRADLE_PROJECT_nexusPgpSigningKey: ${{ secrets.NEXUS_PGP_SIGNING_KEY }}
+#          ORG_GRADLE_PROJECT_nexusPgpSigningPassword: ${{ secrets.NEXUS_PGP_SIGNING_PASSWORD }}
+#        run: |
+#          ./gradlew assemble ${{ inputs.project }}-web:installDist publishToNexus closeAndReleaseNexusStagingRepository
