--- a/.github/actions/build-tag-number/action.yml
+++ b/.github/actions/build-tag-number/action.yml
@@ -11,7 +11,10 @@ inputs:
     description: 'GitHub Token to create and delete refs (GITHUB_TOKEN)'
     required: false # Not required when getting the stored build number for later jobs, only in the first jobs when it's generated
   prefix:
-    description: 'Prefix for the build-number-<num> tag to make it unique if tracking multiple build numbers'
+    description: 'Prefix for the build-number-<num> tag to make it unique if tracking multiple build numbers.  Auto-hyphenated.'
+    required: false
+  suffix:
+    description: 'Suffix for the build-number-<num> tag to make it unique if tracking multiple build numbers.  Auto-hyphenated.'
     required: false
   skip-increment:
     description: If true, will output the most recent tag instead of incrementing
