--- a/.github/workflows/deck-kayenta.yml
+++ b/.github/workflows/deck-kayenta.yml
@@ -2,6 +2,14 @@ name: Deck Kayenta
 run-name: Deck Kayenta ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
+  workflow_dispatch:
+    inputs:
+      skip-tests:
+        description: If specified, does not run tests
+        type: boolean
+        default: false
+
+
   push:
     branches:
       - release-*
