--- a/.github/workflows/deck.yml
+++ b/.github/workflows/deck.yml
@@ -2,6 +2,13 @@ name: Deck
 run-name: Deck ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
+  workflow_dispatch:
+    inputs:
+      skip-tests:
+        description: If specified, does not run tests
+        type: boolean
+        default: false
+
   push:
     branches:
       - release-*
