clouddriver integration tests on push or call only - matrix explodes the checks UI

--- a/.github/workflows/clouddriver-integration-tests-kubernetes.yml
+++ b/.github/workflows/clouddriver-integration-tests-kubernetes.yml
@@ -1,6 +1,13 @@
 name: Kubernetes Integration Tests
 
-on: workflow_call
+on:
+  workflow_call:
+
+  push:
+    branches:
+      - main
+    paths:
+      - 'clouddriver/**'
 
 env:
   GRADLE_OPTS: -Dorg.gradle.daemon=false -Xmx6g -Xms6g
