Various UI build fixes

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -86,8 +86,7 @@ jobs:
           echo "### Version Info" >> "$GITHUB_STEP_SUMMARY"
           echo "| | |" >> "$GITHUB_STEP_SUMMARY"
           echo "| --- | --- |" >> "$GITHUB_STEP_SUMMARY"
-          echo "| __Version:__ | $VERSION |" >> "$GITHUB_STEP_SUMMARY"
-          echo "| __Is Release:__ | $IS_RELEASE |" >> "$GITHUB_STEP_SUMMARY"
-          echo "| __Build Number:__ | $BUILD_NUMBER |" >> "$GITHUB_STEP_SUMMARY"
-          echo "| __Release Train:__ | $RELEASE_TRAIN |" >> "$GITHUB_STEP_SUMMARY"
-          echo "| __Release Train (suffixed):__ | $CLEAN_REF |" >> "$GITHUB_STEP_SUMMARY"
+          echo "| __Version__ | $VERSION |" >> "$GITHUB_STEP_SUMMARY"
+          echo "| __Is Release__ | $IS_RELEASE |" >> "$GITHUB_STEP_SUMMARY"
+          echo "| __Build Number__ | $BUILD_NUMBER |" >> "$GITHUB_STEP_SUMMARY"
+          echo "| __Release Train__ | $RELEASE_TRAIN ($CLEAN_REF) |" >> "$GITHUB_STEP_SUMMARY"
