--- a/deck-kayenta/package.json
+++ b/deck-kayenta/package.json
@@ -24,6 +24,7 @@
     "develop": "npm run clean && run-p watch proxy",
     "postinstall": "check-plugin && check-peer-dependencies || true",
     "prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx,html,css,less,json}'",
+    "prettier:check": "prettier --check 'src/**/*.{js,jsx,ts,tsx,html,css,less,json}'",
     "proxy": "dev-proxy",
     "watch": "rollup -c -w --no-watch.clearScreen"
   },
