--- a/deck-kayenta/build.gradle
+++ b/deck-kayenta/build.gradle
@@ -1,5 +1,3 @@
-import java.nio.file.Paths
-import groovy.json.JsonOutput
 import groovy.json.JsonSlurper
 
 plugins {
@@ -23,13 +21,12 @@ node {
 }
 
 task lint(type: YarnTask) {
-  dependsOn "eslintPlugin"
+  dependsOn "yarn"
 
   yarnCommand = ["lint"]
 }
 
 task prettier(type: YarnTask) {
-  dependsOn "eslintPlugin"
   dependsOn "lint"
 
   yarnCommand = ["prettier:check"]
@@ -44,16 +41,14 @@ task test(type: YarnTask) {
   dependsOn "yarn"
 
   yarnCommand = ["test"]
-  args = ["--single-run", "--reporters", "dots"]
 
   if (project.hasProperty('skipTests')) {
-    karma.enabled = false
+    test.enabled = false
   }
 }
 
 task webpack(type: YarnTask) {
   dependsOn "yarn"
-  dependsOn "modules"
   dependsOn "runLinters"
   dependsOn "test"
 
@@ -66,25 +61,7 @@ task webpack(type: YarnTask) {
 }
 webpack.outputs.dir file('build/webpack')
 
-task copyFavicon(type: Copy) {
+
+task build {
   dependsOn "webpack"
-
-  from "packages/app/icons/prod-favicon.ico"
-  into "build/webpack"
-  rename "prod-favicon.ico", "favicon.ico"
 }
-
-task generateVersionFile {
-  doLast {
-    'git update-index --assume-unchanged version.json'.execute()
-    def buildInfo = [
-      version: project.hasProperty('deckVersion') ? "${deckVersion}" : "n/a",
-      created: new Date().getTime()
-    ]
-    def buildJson = JsonOutput.prettyPrint(JsonOutput.toJson(buildInfo))
-    mkdir "build/webpack"
-    file(Paths.get("build", "webpack", "version.json")).write(buildJson)
-    file("version.json").write(buildJson)
-  }
-}
-yarn.dependsOn 'generateVersionFile'
