--- a/.github/actions/update-monorepo/package.json
+++ b/.github/actions/update-monorepo/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "spinnaker-release",
+  "name": "update-monorepo",
   "version": "1.0.0",
-  "description": "Github Action for generating a Spinnaker release",
+  "description": "Github Action for updating the Spinnaker monorepo by pulling from individual repos",
   "main": "index.js",
   "scripts": {
     "build": "npm run format && ncc build src/index.ts",
@@ -12,14 +12,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "@vercel/ncc": "^0.38.1",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@actions/artifact": "^1.1.2",
     "@actions/core": "^1.10.1",
-    "@google-cloud/storage": "^7.5.0",
+    "@actions/exec": "^1.1.1",
+    "@actions/github": "^6.0.0",
+    "@actions/io": "^1.1.3",
     "yaml": "^2.3.4"
   }
 }
