--- a/.github/workflows/clouddriver-integration-tests-kubernetes.yml
+++ b/.github/workflows/clouddriver-integration-tests-kubernetes.yml
@@ -77,4 +77,4 @@ jobs:
       - name: Kubernetes Provider Integration Tests
         run: |
           version=$(echo '${{ matrix.kubernetes-image }}' | grep -o 'v[0-9]*\.[0-9]*')
-          ./gradlew -PenableCrossCompilerPlugin=true --build-cache :clouddriver-kubernetes:integrationTest -Pkubernetes-image=${{ matrix.kubernetes-image }} -Pkubectl-version=${{ matrix.kubectl-version }} -Pkubernetes-version=${version}
+          ./gradlew -PenableCrossCompilerPlugin=true --build-cache :clouddriver:clouddriver-kubernetes:integrationTest -Pkubernetes-image=${{ matrix.kubernetes-image }} -Pkubectl-version=${{ matrix.kubectl-version }} -Pkubernetes-version=${version}
