--- a/kork/kork-swagger/kork-swagger.gradle
+++ b/kork/kork-swagger/kork-swagger.gradle
@@ -7,7 +7,8 @@ dependencies {
 
   implementation "com.google.guava:guava"
   implementation "org.springframework.boot:spring-boot-autoconfigure"
-  implementation "io.springfox:springfox-boot-starter"
+  implementation "io.springfox:springfox-swagger2"
+  implementation "io.springfox:springfox-swagger-ui"
   implementation "org.springframework:spring-webmvc"
 
 }
