Add back defunct properties to facilitate merging

--- a/halyard/gradle.properties
+++ b/halyard/gradle.properties
@@ -1,2 +1,8 @@
+korkVersion=7.235.0
+clouddriverVersion=5.85.0
+fiatVersion=1.48.0
+front50Version=2.32.0
 org.gradle.parallel=true
+spinnakerGradleVersion=8.32.1
+targetJava11=true
 targetJava17=false
