--- a/clouddriver/gradle.properties
+++ b/clouddriver/gradle.properties
@@ -1,4 +1,7 @@
+korkVersion=7.234.0
+fiatVersion=1.48.0
 org.gradle.parallel=true
+spinnakerGradleVersion=8.32.1
 targetJava17=false
 org.gradle.jvmargs=-Xmx6g -Xms6g
 testJvmMaxMemory=6g
