--- a/echo/gradle.properties
+++ b/echo/gradle.properties
@@ -1,3 +1,7 @@
+fiatVersion=1.48.0
+korkVersion=7.235.0
+kotlinVersion=1.6.21
 org.gradle.parallel=true
+spinnakerGradleVersion=8.32.1
 targetJava17=false
 org.gradle.jvmargs=-Xmx2g -Xms2g
