--- a/fiat/gradle.properties
+++ b/fiat/gradle.properties
@@ -1,3 +1,5 @@
 includeProviders=file,github,google-groups,ldap
+korkVersion=7.235.0
 org.gradle.parallel=true
+spinnakerGradleVersion=8.32.1
 targetJava17=false
