--- a/gate/gradle.properties
+++ b/gate/gradle.properties
@@ -1,4 +1,8 @@
 enablePublishing=false
+fiatVersion=1.48.0
 includeProviders=basic,iap,ldap,oauth2,saml,x509
+korkVersion=7.235.0
+kotlinVersion=1.6.21
 org.gradle.parallel=true
+spinnakerGradleVersion=8.32.1
 targetJava17=false
