--- a/keel/gradle.properties
+++ b/keel/gradle.properties
@@ -1,8 +1,13 @@
+kotlinVersion=1.5.32
+fiatVersion=1.48.0
+korkVersion=7.235.0
 kapt.use.worker.api=true
 liquibaseTaskPrefix=liquibase
 org.gradle.parallel=true
+testContainersVersion=1.15.3
 okHttpVersion=4.5.0
 resilience4jVersion=1.5.0
+spinnakerGradleVersion=8.32.1
 
 # Used to control whether to spin up docker to run liquibase before jooq
 buildingInDocker=false
