--- a/orca/gradle.properties
+++ b/orca/gradle.properties
@@ -1,2 +1,7 @@
+fiatVersion=1.48.0
+korkVersion=7.235.0
+kotlinVersion=1.6.21
 org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx4g
+spinnakerGradleVersion=8.32.1
 targetJava17=false
