--- a/.github/workflows/gate.yml
+++ b/.github/workflows/gate.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: ./.github/actions/generic-build-publish
         with:
           project: gate
-          gradle-cmd-opts: -Xmx2g -Xms2g -PenableCrossCompilerPlugin=true
+          gradle-cmd-opts: -PenableCrossCompilerPlugin=true
           publish: ${{ github.event_name != 'pull_request' }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           gar-json-key: ${{ secrets.GAR_JSON_KEY }}
