--- a/.github/workflows/clouddriver.yml
+++ b/.github/workflows/clouddriver.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: ./.github/actions/generic-build-publish
         with:
           project: clouddriver
-          gradle-cmd-opts: -Xmx10g -Xms10g -PenableCrossCompilerPlugin=true
+          gradle-cmd-opts: -PenableCrossCompilerPlugin=true
           publish: ${{ github.event_name != 'pull_request' }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           gar-json-key: ${{ secrets.GAR_JSON_KEY }}
