--- a/.github/actions/spinnaker-release/package.json
+++ b/.github/actions/spinnaker-release/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@vercel/ncc": "^0.38.1",
     "prettier": "^3.0.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
   },
   "dependencies": {
