Create shim workflow for branch creation

--- a/.github/workflows/deck-kayenta.yml
+++ b/.github/workflows/deck-kayenta.yml
@@ -2,6 +2,7 @@ name: Deck Kayenta
 run-name: Deck Kayenta ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
+  workflow_call:
   workflow_dispatch:
 
   push:
