--- a/.github/workflows/halyard.yml
+++ b/.github/workflows/halyard.yml
@@ -2,6 +2,7 @@ name: Halyard
 run-name: Halyard ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
+  workflow_call:
   workflow_dispatch:
 
   push:
