--- a/.github/workflows/rosco.yml
+++ b/.github/workflows/rosco.yml
@@ -2,6 +2,7 @@ name: Rosco
 run-name: Rosco ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
+  workflow_call:
   workflow_dispatch:
 
   push:
