--- a/.github/workflows/clouddriver.yml
+++ b/.github/workflows/clouddriver.yml
@@ -2,6 +2,7 @@ name: Clouddriver
 run-name: Clouddriver ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
+  workflow_call:
   workflow_dispatch:
 
   push:
