--- a/.github/workflows/deck.yml
+++ b/.github/workflows/deck.yml
@@ -2,6 +2,7 @@ name: Deck
 run-name: Deck ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
+  workflow_call:
   workflow_dispatch:
 
   push:
