--- a/.github/workflows/echo.yml
+++ b/.github/workflows/echo.yml
@@ -2,6 +2,7 @@ name: Echo
 run-name: Echo ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
+  workflow_call:
   workflow_dispatch:
 
   push:
