--- a/.github/workflows/fiat.yml
+++ b/.github/workflows/fiat.yml
@@ -2,6 +2,7 @@ name: Fiat
 run-name: Fiat ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
+  workflow_call:
   workflow_dispatch:
 
   push:
