--- a/.github/workflows/front50.yml
+++ b/.github/workflows/front50.yml
@@ -2,6 +2,7 @@ name: Front50
 run-name: Front50 ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
+  workflow_call:
   workflow_dispatch:
 
   push:
