--- a/.github/workflows/igor.yml
+++ b/.github/workflows/igor.yml
@@ -2,6 +2,7 @@ name: Igor
 run-name: Igor ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
+  workflow_call:
   workflow_dispatch:
 
   push:
