--- a/.github/workflows/keel.yml
+++ b/.github/workflows/keel.yml
@@ -2,6 +2,7 @@ name: Keel
 run-name: Keel ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
+  workflow_call:
   workflow_dispatch:
 
   push:
