--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -2,6 +2,7 @@ name: Orca
 run-name: Orca ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
+  workflow_call:
   workflow_dispatch:
 
   push:
