--- a/.github/workflows/z-new-branch-creation.yml
+++ b/.github/workflows/z-new-branch-creation.yml
@@ -1,4 +1,4 @@
-name: All the Things
+name: zNew Branch Creation
 
 # There is an issue with push triggers where it does not trigger on new branches if there are path filters
 # This makes new release branches difficult, as we need an initial build
