--- a/.github/actions/version/action.yml
+++ b/.github/actions/version/action.yml
@@ -89,7 +89,7 @@ runs:
         
         # Some things like NPM enforce semver-ish conventions
         if [[ "$IS_RELEASE" == 'true' ]]; then
-          SEMVER="$VERSION"
+          SEMVER="$RELEASE_TRAIN.$BUILD_NUMBER"
         else
           SEMVER="0.0.0-$VERSION"
         fi
