Attempt 2 at release summaries

--- a/.github/workflows/spinnaker-release.yml
+++ b/.github/workflows/spinnaker-release.yml
@@ -80,24 +80,24 @@ jobs:
           echo "| __BoM__ | ${{ steps.spinnaker-release.outputs.bom-url }} |" >> "$GITHUB_STEP_SUMMARY"
           echo "| __Changelog__ | ${{ steps.spinnaker-release.outputs.bom-url }} |" >> "$GITHUB_STEP_SUMMARY"
           echo "| __versions.yml__ | ${{ steps.spinnaker-release.outputs.versions-yml-url }} |" >> "$GITHUB_STEP_SUMMARY"
-          echo "<details>"
-          echo "<summary>BoM Contents</summary>"
-          echo ""
-          echo "```"
-          echo "${{ steps.spinnaker-release-outputs.bom }}"
-          echo "```"
-          echo "</details>"
-          echo "<details>"
-          echo "<summary>Changelog Contents</summary>"
-          echo ""
-          echo "```"
-          echo "${{ steps.spinnaker-release-outputs.changelog }}"
-          echo "```"
-          echo "</details>"
-          echo "<details>"
-          echo "<summary>Changelog Contents</summary>"
-          echo ""
-          echo "```"
-          echo "${{ steps.spinnaker-release-outputs.versions-yml }}"
-          echo "```"
-          echo "</details>"
+          echo "<details>" >> "$GITHUB_STEP_SUMMARY"
+          echo "<summary>BoM Contents</summary>" >> "$GITHUB_STEP_SUMMARY"
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          echo '```' >> "$GITHUB_STEP_SUMMARY"
+          echo "${{ steps.spinnaker-release-outputs.bom }}" >> "$GITHUB_STEP_SUMMARY"
+          echo '```' >> "$GITHUB_STEP_SUMMARY"
+          echo "</details>" >> "$GITHUB_STEP_SUMMARY"
+          echo "<details>" >> "$GITHUB_STEP_SUMMARY"
+          echo "<summary>Changelog Contents</summary>" >> "$GITHUB_STEP_SUMMARY"
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          echo '```' >> "$GITHUB_STEP_SUMMARY"
+          echo "${{ steps.spinnaker-release-outputs.changelog }}" >> "$GITHUB_STEP_SUMMARY"
+          echo '```' >> "$GITHUB_STEP_SUMMARY"
+          echo "</details>" >> "$GITHUB_STEP_SUMMARY"
+          echo "<details>" >> "$GITHUB_STEP_SUMMARY"
+          echo "<summary>versions.yml Contents</summary>" >> "$GITHUB_STEP_SUMMARY"
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          echo '```' >> "$GITHUB_STEP_SUMMARY"
+          echo "${{ steps.spinnaker-release-outputs.versions-yml }}" >> "$GITHUB_STEP_SUMMARY"
+          echo '```' >> "$GITHUB_STEP_SUMMARY"
+          echo "</details>" >> "$GITHUB_STEP_SUMMARY"
