--- a/.github/actions/version/action.yml
+++ b/.github/actions/version/action.yml
@@ -85,7 +85,8 @@ runs:
         fi
         echo "is-release=$IS_RELEASE" >> "$GITHUB_OUTPUT"
         
-        echo "tag=${{ inputs.project }}-$VERSION" >> "$GITHUB_OUTPUT"
+        TAG="${{ inputs.project }}-$REF-$BUILD_NUMBER"
+        echo "tag=$TAG" >> "$GITHUB_OUTPUT"
         
         # Some things like NPM enforce semver-ish conventions
         if [[ "$IS_RELEASE" == 'true' ]]; then
@@ -107,5 +108,6 @@ runs:
           echo "| __Is Release__ | $IS_RELEASE |" >> "$GITHUB_STEP_SUMMARY"
           echo "| __Build Number__ | $BUILD_NUMBER |" >> "$GITHUB_STEP_SUMMARY"
           echo "| __Release Train__ | $RELEASE_TRAIN ($CLEAN_REF) |" >> "$GITHUB_STEP_SUMMARY"
+          echo "| __Tag__ | $TAG |" >> "$GITHUB_STEP_SUMMARY"
           echo "| __Build URL__ | $BUILD_URL |" >> "$GITHUB_STEP_SUMMARY"
         fi
