--- a/.github/workflows/update-monorepo.yml
+++ b/.github/workflows/update-monorepo.yml
@@ -23,4 +23,4 @@ jobs:
       - uses: ./.github/actions/update-monorepo
         with:
           remote-ref: ${{ inputs.remote-ref }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.SPINNAKERBOT_PERSONAL_ACCESS_TOKEN }}
