--- a/.github/actions/publish-deb/action.yml
+++ b/.github/actions/publish-deb/action.yml
@@ -39,26 +39,18 @@ runs:
       with:
         credentials_json: ${{ inputs.gar-json-key }}
 
-    - name: Process Inputs
-      shell: bash
-      run: |
-        echo "deb-version=${{ inputs.is-release != 'true' && inputs.build-number || inputs.version }}" >> $GITHUB_ENV
-        DEB_SUFFIX=${{ inputs.is-release != 'true' && 'dev' || '' }}
-        echo "deb-suffix=$DEB_SUFFIX" >> $GITHUB_ENV
-        echo "deb-name=${{ inputs.project }}-$DEB_SUFFIX" >> $GITHUB_ENV
-
     - name: Publish apt packages to Google Artifact Registry
       env:
         # If this is a release version, it's a valid deb version e.g. 2023.1.1
         # If this is a main build, the package name itself is suffixed with -main and the version is the sequential build number
-        ORG_GRADLE_PROJECT_version: ${{ env.deb-version }}
+        ORG_GRADLE_PROJECT_version: ${{ inputs.is-release != 'true' && inputs.build-number || inputs.version }}
         ORG_GRADLE_PROJECT_artifactRegistryPublishEnabled: 'true'
         ORG_GRADLE_PROJECT_artifactRegistryPublishAptEnabled: 'true'
         ORG_GRADLE_PROJECT_artifactRegistryPublishMavenEnabled: 'false'
         ORG_GRADLE_PROJECT_artifactRegistryAptProject: ${{ inputs.gar-apt-project }}
         ORG_GRADLE_PROJECT_artifactRegistryAptLocation: ${{ inputs.gar-apt-location }}
         ORG_GRADLE_PROJECT_artifactRegistryAptTempGcsBucket: ${{ inputs.gcs-temp-bucket }}
-        ORG_GRADLE_PROJECT_ospackageSuffix: ${{ env.deb-suffix }}
+        ORG_GRADLE_PROJECT_ospackageSuffix: ${{ inputs.is-release != 'true' && 'dev' || '' }}
         GAR_JSON_KEY: ${{ inputs.gar-json-key }}
       shell: bash
       run: |
@@ -71,5 +63,5 @@ runs:
         echo "### Deb Publishing" >> "$GITHUB_STEP_SUMMARY"
         echo "| | |" >> "$GITHUB_STEP_SUMMARY"
         echo "| --- | --- |" >> "$GITHUB_STEP_SUMMARY"
-        echo "| __Name__ | ${{ env.deb-name }} |" >> "$GITHUB_STEP_SUMMARY"
-        echo "| __Version__ | ${{ env.deb-version }} |" >> "$GITHUB_STEP_SUMMARY"
+        echo "| __Name__ | ${{ inputs.project }}-${{ inputs.is-release != 'true' && 'dev' || '' }} |" >> "$GITHUB_STEP_SUMMARY"
+        echo "| __Version__ | ${{ inputs.is-release != 'true' && inputs.build-number || inputs.version }} |" >> "$GITHUB_STEP_SUMMARY"
