Clarify rebuild job name

--- a/.github/workflows/z-new-branch-creation.yml
+++ b/.github/workflows/z-new-branch-creation.yml
@@ -1,5 +1,5 @@
-name: zNew Branch Creation
-run-name: New Branch Creation (${{ github.ref_name }})
+name: zNew Branch Creation/Rebuild All
+run-name: ${{ github.event_name == 'workflow_dispatch' && format('Manual Rebuild All ({0})', github.ref_name) || format('New Branch Creation ({0})', github.ref_name) }}
 
 # There is an issue with push triggers where it does not trigger on new branches if there are path filters
 # This makes new release branches difficult, as we need an initial build
