Disable release deb builds per-commit, as they have no BoM - will need a separate publishing flow

--- a/.github/actions/generic-build-publish/action.yml
+++ b/.github/actions/generic-build-publish/action.yml
@@ -112,7 +112,7 @@ runs:
         gar-json-key: ${{ inputs.gar-json-key }}
 
     - name: Publish Debian packages
-      if: inputs.publish == 'true' && inputs.publish-debs == 'true'
+      if: inputs.publish == 'true' && inputs.publish-debs == 'true' && steps.version.outputs.is-release == 'false'
       uses: ./.github/actions/publish-deb
       with:
         project: ${{ inputs.project }}
