--- a/.github/actions/update-monorepo/action.yml
+++ b/.github/actions/update-monorepo/action.yml
@@ -8,9 +8,9 @@ runs:
 
 inputs:
   repos:
-    description: Comma-separated list of repositories under `github.com/spinnaker/<service` to be merged to matching subtrees
+    description: Comma-separated list of repositories under `github.com/spinnaker/<service>` to be merged to matching subtrees
     required: true
-    default: 'clouddriver,deck,deck-kayenta,echo,fiat,front50,gate,halyard,igor,kayenta,keel,orca,rosco,spin,spinnaker-gradle-project'
+    default: 'clouddriver,deck,deck-kayenta,echo,fiat,front50,gate,halyard,igor,kayenta,keel,kork,orca,rosco,spin,spinnaker-gradle-project'
   remote-ref:
     description: Remote ref to merge from
     default: master
