--- a/.github/workflows/update-monorepo.yml
+++ b/.github/workflows/update-monorepo.yml
@@ -1,4 +1,5 @@
 name: Update Monorepo
+run-name: Update Monorepo (${{ inputs.remote-ref }})
 
 on:
   workflow_dispatch:
@@ -17,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.remote-ref == 'master' && 'main' || inputs.remote-ref  }}
+          ref: ${{ inputs.remote-ref == 'master' && 'main' || inputs.remote-ref }}
           fetch-depth: 0
 
       - uses: ./.github/actions/update-monorepo
